--- a/css/main.css
+++ b/css/main.css
@@ -998,3 +998,95 @@ header .container .logo img {
     background-color: var(--maincolor);
 }
 /* price end */
+/* subscribe start */
+.subscribe {
+    padding: var(--section-padding);
+    background-image: url(../images/subscribe.jpg);
+    position: relative;
+}
+.subscribe::before {
+    content: "";
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+.subscribe .container {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.subscribe .container form {
+    flex-basis: 60%;
+    display: flex;
+    border: 2px solid white;
+    color: white;
+}
+.subscribe .container form i {
+    position: absolute;
+    padding: 15px 20px;
+    font-size: 20px;
+    color: white;
+}
+.subscribe .container form input[type="email"] {
+    width: 1px;
+    padding: 15px 0 15px 50px;
+    flex-grow: 2;
+    position: relative;
+    background-color: transparent;
+    caret-color: var(--maincolor);
+    outline: none;
+    border: none;
+    color: white;
+    
+}
+.subscribe .container form input[type="email"]::placeholder {
+    color: white;
+}
+.subscribe .container form input[type="submit"] {
+    background-color: var(--maincolor);
+    padding: 0 20px;
+    font-size: 13px;
+    font-weight: 600;
+    color: white;
+    border: none;
+}
+.subscribe .container p {
+    flex-basis: 35%;
+    color: white;
+    font-size: 13px;
+    font-weight: 300;
+    line-height: 1.7;
+}
+@media (max-width: 767px) {
+    .subscribe .container {
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    .subscribe .container form {
+        flex-basis: 80%;
+    }
+    .subscribe .container p {
+        margin-top: 30px;
+        flex-basis: 85%;
+        text-align: center;
+    }
+}
+@media (max-width: 575px) {
+    .subscribe .container form {
+        flex-basis: 90%;
+    }
+    .subscribe .container form input[type="submit"] {
+        padding: 0 10px;
+    }
+    .subscribe .container form i {
+        padding: 15px 10px;
+    }
+    .subscribe .container form input[type="email"] {
+        padding: 15px 0 15px 40px;
+    }
+}
+/* subscribe end */
