--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@
 :root {
     --maincolor: #06a6d0;
     --secondcolor: #1f2021;
-    --background-color: rgba(255, 255, 255, 0.88);
+    --background-color: rgba(255, 255, 255, 0.85);
     --section-padding: 70px 0;
     --side-color: #06a8d0b9;
     --thirdcolor: #948f91;
@@ -110,6 +110,27 @@ input[type="submit"], input[type="button"] {
     }
 }
 /* compounant end */
+/* background start */
+.background {
+    position: fixed;
+    height: 100vh;
+    width: 100%;
+    z-index: -1000;
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+} 
+.background .container {
+    height: 100vh;
+    display: grid;
+    grid-template-columns: repeat(12, auto);
+    column-gap: 2.7%;
+}
+.background .container span {
+    background-color: #353235;
+}
+/* background end */
 /* Header start */
 header {
     position: absolute;
@@ -223,27 +244,6 @@ header .container .logo img {
     }
 }
 /* Header end */
-/* background start */
-.background {
-    position: fixed;
-    height: 100vh;
-    width: 100%;
-    z-index: -1000;
-    top: 0;
-    left: 0;
-    display: flex;
-    justify-content: center;
-} 
-.background .container {
-    height: 100vh;
-    display: grid;
-    grid-template-columns: repeat(12, auto);
-    column-gap: 2.7%;
-}
-.background .container div {
-    background-color: #353235;
-}
-/* background end */
 /* landing start */
 .landing {
     width: 100%;
@@ -1121,6 +1121,7 @@ header .container .logo img {
     align-self: flex-end;
     background-color: var(--maincolor);
     color: white;
+    border: none;
 }
 .contact .container .content .info {
     width: 25%;
@@ -1192,18 +1193,22 @@ footer .content h4 {
     width: 100%;
     font-weight: 300;
     text-transform: uppercase;
-    font-size: 20px;
+    font-size: 22px;
 }
 footer .content hr {
     width: 100%;
     margin: 10px 0;
 }
-footer .content a {
+footer .content > a {
     color: white;
     margin: 0 15px;
 }
 footer .content p {
     font-size: 12px;
     margin-top: 50px;
+}
+footer .content p > a {
+    text-decoration: none;
+    color: var(--maincolor);
 }
 /* footer end */
